corregida responsividad basica

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>pokeball.png">
 
     <!-- Remueve los margenes por defecto de Vue -->
-    <style> body { margin: 0 !important; } </style>
+    <style> body { margin: 0 !important } </style>
     
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
